// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`should render FilterBox correctly 1`] = `
<div
  className="fdk-panel--filter"
>
  <div
    className="fdk-panel__header"
  >
    <button
      className="fdk-toggleFilter p-0 d-flex justify-content-between align-items-center w-100"
      onClick={[Function]}
      type="button"
    >
      <span>
        Testbox
      </span>
    </button>
  </div>
  <Collapse
    appear={false}
    enter={true}
    exit={true}
    in={false}
    isOpen={true}
    mountOnEnter={false}
    onEnter={[Function]}
    onEntered={[Function]}
    onEntering={[Function]}
    onExit={[Function]}
    onExited={[Function]}
    onExiting={[Function]}
    tag="div"
    timeout={350}
    unmountOnExit={false}
  >
    <div
      className="fdk-panel__content"
    >
      <div
        className="fdk-items-list"
      >
        <div
          className="fdk-items-title"
          key="group-title-0"
        />
        <div
          key="group-items-0"
        >
          <FilterOption
            active={false}
            capitalize={true}
            count={104}
            itemKey={0}
            key="0"
            label="GOVE"
            onClick={[MockFunction]}
            referenceDataItems={
              Object {
                "AGRI": Object {
                  "code": "AGRI",
                  "conceptSchema": Object {
                    "id": "http://publications.europa.eu/resource/authority/data-theme",
                    "title": Object {
                      "en": "Dataset types Named Authority List",
                    },
                  },
                  "id": "http://publications.europa.eu/resource/authority/data-theme/AGRI",
                  "startUse": "2015-10-01",
                  "title": Object {
                    "bg": "Селско стопанство, рибарство, горско стопанство и храни",
                    "pt": "Agricultura, pesca, silvicultura e alimentação",
                  },
                },
              }
            }
            value="GOVE"
          />
          <FilterOption
            active={false}
            capitalize={true}
            count={11}
            itemKey={0}
            key="0"
            label="EDUC"
            onClick={[MockFunction]}
            referenceDataItems={
              Object {
                "AGRI": Object {
                  "code": "AGRI",
                  "conceptSchema": Object {
                    "id": "http://publications.europa.eu/resource/authority/data-theme",
                    "title": Object {
                      "en": "Dataset types Named Authority List",
                    },
                  },
                  "id": "http://publications.europa.eu/resource/authority/data-theme/AGRI",
                  "startUse": "2015-10-01",
                  "title": Object {
                    "bg": "Селско стопанство, рибарство, горско стопанство и храни",
                    "pt": "Agricultura, pesca, silvicultura e alimentação",
                  },
                },
              }
            }
            value="EDUC"
          />
          <FilterOption
            active={false}
            capitalize={true}
            count={8}
            itemKey={0}
            key="0"
            label="HEAL"
            onClick={[MockFunction]}
            referenceDataItems={
              Object {
                "AGRI": Object {
                  "code": "AGRI",
                  "conceptSchema": Object {
                    "id": "http://publications.europa.eu/resource/authority/data-theme",
                    "title": Object {
                      "en": "Dataset types Named Authority List",
                    },
                  },
                  "id": "http://publications.europa.eu/resource/authority/data-theme/AGRI",
                  "startUse": "2015-10-01",
                  "title": Object {
                    "bg": "Селско стопанство, рибарство, горско стопанство и храни",
                    "pt": "Agricultura, pesca, silvicultura e alimentação",
                  },
                },
              }
            }
            value="HEAL"
          />
          <FilterOption
            active={false}
            capitalize={true}
            count={7}
            itemKey={0}
            key="0"
            label="Ukjent"
            onClick={[MockFunction]}
            referenceDataItems={
              Object {
                "AGRI": Object {
                  "code": "AGRI",
                  "conceptSchema": Object {
                    "id": "http://publications.europa.eu/resource/authority/data-theme",
                    "title": Object {
                      "en": "Dataset types Named Authority List",
                    },
                  },
                  "id": "http://publications.europa.eu/resource/authority/data-theme/AGRI",
                  "startUse": "2015-10-01",
                  "title": Object {
                    "bg": "Селско стопанство, рибарство, горско стопанство и храни",
                    "pt": "Agricultura, pesca, silvicultura e alimentação",
                  },
                },
              }
            }
            value="Ukjent"
          />
          <FilterOption
            active={false}
            capitalize={true}
            count={1}
            itemKey={0}
            key="0"
            label="AGRI"
            onClick={[MockFunction]}
            referenceDataItems={
              Object {
                "AGRI": Object {
                  "code": "AGRI",
                  "conceptSchema": Object {
                    "id": "http://publications.europa.eu/resource/authority/data-theme",
                    "title": Object {
                      "en": "Dataset types Named Authority List",
                    },
                  },
                  "id": "http://publications.europa.eu/resource/authority/data-theme/AGRI",
                  "startUse": "2015-10-01",
                  "title": Object {
                    "bg": "Селско стопанство, рибарство, горско стопанство и храни",
                    "pt": "Agricultura, pesca, silvicultura e alimentação",
                  },
                },
              }
            }
            value="AGRI"
          />
          <div>
            <Collapse
              appear={false}
              enter={true}
              exit={true}
              in={false}
              isOpen={false}
              mountOnEnter={false}
              onEnter={[Function]}
              onEntered={[Function]}
              onEntering={[Function]}
              onExit={[Function]}
              onExited={[Function]}
              onExiting={[Function]}
              tag="div"
              timeout={350}
              unmountOnExit={false}
            >
              <div>
                <FilterOption
                  active={false}
                  capitalize={true}
                  count={1}
                  itemKey={0}
                  key="0"
                  label="TEST"
                  onClick={[MockFunction]}
                  referenceDataItems={
                    Object {
                      "AGRI": Object {
                        "code": "AGRI",
                        "conceptSchema": Object {
                          "id": "http://publications.europa.eu/resource/authority/data-theme",
                          "title": Object {
                            "en": "Dataset types Named Authority List",
                          },
                        },
                        "id": "http://publications.europa.eu/resource/authority/data-theme/AGRI",
                        "startUse": "2015-10-01",
                        "title": Object {
                          "bg": "Селско стопанство, рибарство, горско стопанство и храни",
                          "pt": "Agricultura, pesca, silvicultura e alimentação",
                        },
                      },
                    }
                  }
                  value="TEST"
                />
              </div>
            </Collapse>
            <button
              className="fdk-toggleList"
              onClick={[Function]}
              type="button"
            >
              <img
                alt=""
                className="mr-2"
                src={[Function]}
              />
              Show more
            </button>
          </div>
        </div>
      </div>
    </div>
  </Collapse>
</div>
`;

exports[`should render FilterBox correctly with activeFilter 1`] = `
<div
  className="fdk-panel--filter"
>
  <div
    className="fdk-panel__header"
  >
    <button
      className="fdk-toggleFilter p-0 d-flex justify-content-between align-items-center w-100"
      onClick={[Function]}
      type="button"
    >
      <span>
        Testbox
      </span>
    </button>
  </div>
  <Collapse
    appear={false}
    enter={true}
    exit={true}
    in={false}
    isOpen={true}
    mountOnEnter={false}
    onEnter={[Function]}
    onEntered={[Function]}
    onEntering={[Function]}
    onExit={[Function]}
    onExited={[Function]}
    onExiting={[Function]}
    tag="div"
    timeout={350}
    unmountOnExit={false}
  >
    <div
      className="fdk-panel__content"
    >
      <div
        className="fdk-items-list"
      >
        <div
          className="fdk-items-title"
          key="group-title-0"
        />
        <div
          key="group-items-0"
        >
          <FilterOption
            active={true}
            capitalize={true}
            count={104}
            itemKey={0}
            key="0"
            label="GOVE"
            onClick={[MockFunction]}
            referenceDataItems={
              Object {
                "AGRI": Object {
                  "code": "AGRI",
                  "conceptSchema": Object {
                    "id": "http://publications.europa.eu/resource/authority/data-theme",
                    "title": Object {
                      "en": "Dataset types Named Authority List",
                    },
                  },
                  "id": "http://publications.europa.eu/resource/authority/data-theme/AGRI",
                  "startUse": "2015-10-01",
                  "title": Object {
                    "bg": "Селско стопанство, рибарство, горско стопанство и храни",
                    "pt": "Agricultura, pesca, silvicultura e alimentação",
                  },
                },
              }
            }
            value="GOVE"
          />
          <FilterOption
            active={false}
            capitalize={true}
            count={11}
            itemKey={0}
            key="0"
            label="EDUC"
            onClick={[MockFunction]}
            referenceDataItems={
              Object {
                "AGRI": Object {
                  "code": "AGRI",
                  "conceptSchema": Object {
                    "id": "http://publications.europa.eu/resource/authority/data-theme",
                    "title": Object {
                      "en": "Dataset types Named Authority List",
                    },
                  },
                  "id": "http://publications.europa.eu/resource/authority/data-theme/AGRI",
                  "startUse": "2015-10-01",
                  "title": Object {
                    "bg": "Селско стопанство, рибарство, горско стопанство и храни",
                    "pt": "Agricultura, pesca, silvicultura e alimentação",
                  },
                },
              }
            }
            value="EDUC"
          />
          <FilterOption
            active={false}
            capitalize={true}
            count={8}
            itemKey={0}
            key="0"
            label="HEAL"
            onClick={[MockFunction]}
            referenceDataItems={
              Object {
                "AGRI": Object {
                  "code": "AGRI",
                  "conceptSchema": Object {
                    "id": "http://publications.europa.eu/resource/authority/data-theme",
                    "title": Object {
                      "en": "Dataset types Named Authority List",
                    },
                  },
                  "id": "http://publications.europa.eu/resource/authority/data-theme/AGRI",
                  "startUse": "2015-10-01",
                  "title": Object {
                    "bg": "Селско стопанство, рибарство, горско стопанство и храни",
                    "pt": "Agricultura, pesca, silvicultura e alimentação",
                  },
                },
              }
            }
            value="HEAL"
          />
          <FilterOption
            active={false}
            capitalize={true}
            count={7}
            itemKey={0}
            key="0"
            label="Ukjent"
            onClick={[MockFunction]}
            referenceDataItems={
              Object {
                "AGRI": Object {
                  "code": "AGRI",
                  "conceptSchema": Object {
                    "id": "http://publications.europa.eu/resource/authority/data-theme",
                    "title": Object {
                      "en": "Dataset types Named Authority List",
                    },
                  },
                  "id": "http://publications.europa.eu/resource/authority/data-theme/AGRI",
                  "startUse": "2015-10-01",
                  "title": Object {
                    "bg": "Селско стопанство, рибарство, горско стопанство и храни",
                    "pt": "Agricultura, pesca, silvicultura e alimentação",
                  },
                },
              }
            }
            value="Ukjent"
          />
          <FilterOption
            active={false}
            capitalize={true}
            count={1}
            itemKey={0}
            key="0"
            label="AGRI"
            onClick={[MockFunction]}
            referenceDataItems={
              Object {
                "AGRI": Object {
                  "code": "AGRI",
                  "conceptSchema": Object {
                    "id": "http://publications.europa.eu/resource/authority/data-theme",
                    "title": Object {
                      "en": "Dataset types Named Authority List",
                    },
                  },
                  "id": "http://publications.europa.eu/resource/authority/data-theme/AGRI",
                  "startUse": "2015-10-01",
                  "title": Object {
                    "bg": "Селско стопанство, рибарство, горско стопанство и храни",
                    "pt": "Agricultura, pesca, silvicultura e alimentação",
                  },
                },
              }
            }
            value="AGRI"
          />
          <div>
            <Collapse
              appear={false}
              enter={true}
              exit={true}
              in={false}
              isOpen={false}
              mountOnEnter={false}
              onEnter={[Function]}
              onEntered={[Function]}
              onEntering={[Function]}
              onExit={[Function]}
              onExited={[Function]}
              onExiting={[Function]}
              tag="div"
              timeout={350}
              unmountOnExit={false}
            >
              <div>
                <FilterOption
                  active={false}
                  capitalize={true}
                  count={1}
                  itemKey={0}
                  key="0"
                  label="TEST"
                  onClick={[MockFunction]}
                  referenceDataItems={
                    Object {
                      "AGRI": Object {
                        "code": "AGRI",
                        "conceptSchema": Object {
                          "id": "http://publications.europa.eu/resource/authority/data-theme",
                          "title": Object {
                            "en": "Dataset types Named Authority List",
                          },
                        },
                        "id": "http://publications.europa.eu/resource/authority/data-theme/AGRI",
                        "startUse": "2015-10-01",
                        "title": Object {
                          "bg": "Селско стопанство, рибарство, горско стопанство и храни",
                          "pt": "Agricultura, pesca, silvicultura e alimentação",
                        },
                      },
                    }
                  }
                  value="TEST"
                />
              </div>
            </Collapse>
            <button
              className="fdk-toggleList"
              onClick={[Function]}
              type="button"
            >
              <img
                alt=""
                className="mr-2"
                src={[Function]}
              />
              Show more
            </button>
          </div>
        </div>
      </div>
    </div>
  </Collapse>
</div>
`;

exports[`should render FilterBox correctly with empty filter 1`] = `""`;
